Changed colours and added type effect
- Added type effect from MyResume template to home screen.

- Changed colour scheme from green to blue

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
 </head>
 
 <body>
@@ -44,7 +45,7 @@
       <h1><a href="index.html">Kyle Frost</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!--<a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>Game Developer</span> from Leicester</h2>
+      <h2>I'm a passionate <span class="typed" data-typed-items="Developer, Freelancer, Gamer"></span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -635,6 +636,7 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
