Added TicTacToe to Portfolio

--- a/index.html
+++ b/index.html
@@ -559,6 +559,21 @@
             </div>
           </div>
 
+          <!-- TicTacToe -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Unity">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/TicTacToeMenu.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>TicTacToe</h4>
+                <p>Unity</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/TicTacToeMenu.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Multiplayer TicTacToe Party Game."><i class="bx bx-plus"></i></a>
+                  <a href="TicTacToe-Details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
       </div>
 
     </div>
