--- a/Duality-Details.html
+++ b/Duality-Details.html
@@ -76,7 +76,7 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Unity</li>
+              <li><strong>Category</strong>: Unity Game Jam</li>
               <li><strong>Genre</strong>: Online Multiplayer FPS</li>
               <li><strong>Project date</strong>: February, 2022</li>
               <li><strong>Project URL</strong>: <a href="https://github.com/HarryHibbins/Global-Game-Jam" target="_blank">GitHub Repository</a></li>
