--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
             <li data-filter=".filter-Unity">Unity</li>
             <li data-filter=".filter-Cplusplus">C++</li>
             <li data-filter=".filter-Unreal">Unreal Engine</li>
+            <li data-filter=".filter-GameJams">Game Jams</li>
           </ul>
         </div>
       </div>
@@ -409,7 +410,7 @@
       <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
         <!-- The Descent -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Unity">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Unity filter-GameJams">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/TheDescent.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -485,7 +486,7 @@
           </div>
 
         <!-- Duality -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Unity">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Unity filter-GameJams">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/Duality.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -569,6 +570,21 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/TicTacToeMenu.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Multiplayer TicTacToe Party Game."><i class="bx bx-plus"></i></a>
                   <a href="TicTacToe-Details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- NPC.GiveQuest() -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Unity filter-GameJams">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/NPC-Main.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>NPC.GiveQuest()</h4>
+                <p>Unity</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/NPC-Main.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="GMTK2023 Game Jam Submission."><i class="bx bx-plus"></i></a>
+                  <a href="NPCGiveQuest-Details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
