--- a/NPCGiveQuest-Details.html
+++ b/NPCGiveQuest-Details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kyle Frost Portfolio - The Descent</title>
+  <title>Kyle Frost Portfolio - Unreal Platformer</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,29 +46,21 @@
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">The Descent</h2>
+            <h2 class="portfolio-title">NPC.GiveQuest()</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/TheDescent.jpg" alt="" width=100% height=100% >
+                  <img src="assets/img/portfolio/NPC-Main.png" alt="" width=100% height=100% >
                 </div>
 
                 <div class="swiper-slide">
-                  <video width=100% height=100% autoplay muted loop controls> <source src="assets/img/portfolio/TheDescentVid.mp4" type="video/mp4"> </video>
+                  <img src="assets/img/portfolio/NPC-Gameplay.png" alt="" width=100% height=100%>
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/TheDescent-Loot.jpg" alt="" width=100% height=100%>
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/TheDescent-Torches.jpg" alt="" width=100% height=100%>
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/TheDescent-DungeonGeneration.jpg" alt="" width=100% height=100%>
+                  <img src="assets/img/portfolio/NPC-Gameplay2.png" alt="" width=100% height=100%>
                 </div>
 
               </div>
@@ -81,20 +73,23 @@
             <h3>Project information</h3>
             <ul>
               <li><strong>Category</strong>: Unity Game Jam</li>
-              <li><strong>Genre</strong>: Roguelike Dungeon Crawler</li>
-              <li><strong>Project date</strong>: May, 2022</li>
-              <li><strong>Project URL</strong>: <a href="https://github.com/HarryHibbins/Dungeon-Game" target="_blank">GitHub Repository</a></li>
+              <li><strong>Genre</strong>: Indie Puzzle Game</li>
+              <li><strong>Game Jam</strong>: GMTK2023 - "Roles Reversed"</li>
+              <li><strong>Project date</strong>: July, 2023</li>
+              <li><strong>Game Link</strong>: <a href="https://frostkf.itch.io/npcgivequest" target="_blank">itch.io</a> </li>
             </ul>
 
             <p>
-              A 3-week Game Jam based on a given theme - "A horror game where you explore dungeons full of trolls and loot sweet gear." <br><br>This game jam features randomly 
-                generated dungeons with varying designed rooms, created so each run will feel unique in its design. Equipped with a bow and elemental arrows, you can take 
-                down enemies to spawn randomised loot with power tiers - making you more powerful as you push through each floor of the dungeon. At the end of each dungeon 
-                floor is a boss with unique attacks to provide an extra challenge.
-                <ul>
-                <li><b>Randomised Room/Dungeon Spawning</b></li>
-                <li><b>Randomised Tier-Based Loot System</b></li>
-              </ul>
+                A game created in 24 hours for the GMTK2023 Game Jam.<br>
+                I placed #248 out of 6839 entires! <br><br>
+                NPC.GiveQuest() is a game about the often forgotten heroes of the RPG world - the NPC's. It's up to you to forge the path and curate adventures 
+                for our brave new heroes. So be creative! But you best keep up your A-game, because I hear the developer is ready to make cuts.
+                <br><br>
+                Your goal is to make it through a new RPG's beta week, serving as a Quest Giver for the many lands. Build quests by dragging cards with left click and 
+                releasing them over the adventurer. Submit the quest to confirm! Your reputation will change based on the quality of your quests, so stay vigilant or 
+                you might just get patched out.<br><br>
+                Pay attention to the end of day patch notes for potential new rules or stipulations you'll need to follow.<br><br>
+                You can access the pause menu by pressing Esc.
             </p>
           </div>
 
