Adding Rockstar Exp

--- a/index.html
+++ b/index.html
@@ -275,12 +275,14 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
+          <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <h4>Kyle Frost</h4>
             <p><em>Skilled programmer with 6 years of development-focused academic experience, 
-            with strong knowledge of game engines, languages and practices- including Unity, 
-            Unreal, C# and C++. A good attitude to learning, strong adaptability skills and a 
+            with a good foundation of knowledge for game engines, languages and practices- including Unity, 
+            Unreal, C# and C++,
+            as well as experience working within a top games studio for a QA team. <br>
+            A good attitude to learning, strong adaptability skills and a 
             passion for all things gaming.</em></p>
             <p>
             <ul>
@@ -292,21 +294,34 @@
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>BTEC Extended Diploma, Games Development</h4>
-            <h5>2016 - 2018</h5>
-            <p><em>Leicester College, Leicester, UK</em></p>
-            <p>Studying the foundations and theory of Games Development.</p>
-          </div>
-          <div class="resume-item">
             <h4>BSc (Hons) Games Technology, First class</h4>
             <h5>2018 - 2022</h5>
             <p><em>University of the West of England, Bristol, UK</em></p>
             <p>Studying and developing my skills as a professional programmer. Experience with 
                 Unity and C#, Unreal and C++, game design theory and more.</p>
           </div>
+          <div class="resume-item">
+            <h4>BTEC Extended Diploma, Games Development</h4>
+            <h5>2016 - 2018</h5>
+            <p><em>Leicester College, Leicester, UK</em></p>
+            <p>Studying the foundations and theory of Games Development.</p>
+          </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
+          <div class="resume-item">
+            <h4>Associate QA Tester: Build Verification </h4>
+              <h5>2023-2024</h5>
+              <p><em>Rockstar Games, Edinburgh, UK </em></p>
+              <ul>
+                <li>Test core game content and systems, inside and out of a cohesive test plan.</li>
+                <li>Support development by ensuring the quality and timely release of internal game builds.</li>
+                <li>Write accurate bug reports, triaging serious issues and reporting directly to other departments.</li>
+                <li>Work cohesively with Build and Development teams to ensure all bugs are handled promptly throughout the build lifecycle.</li>
+                <li>Handing work over to, and receiving work from, other global test teams.</li>
+              </ul>
+            </p>
+          </div>
           <div class="resume-item">
             <h4>Website Builder/Designer</h4>
               <h5>2018-2020</h5>
