Added Ipsotek Work XP

--- a/index.html
+++ b/index.html
@@ -310,6 +310,17 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
+            <h4>QA Engineer </h4>
+              <h5>2024-Current</h5>
+              <p><em>Ipsotek Ltd</em></p>
+              <ul>
+                <li>Manual testing of software and hardware at production and release stages.</li>
+                <li>Create and run automation scripts for software testing</li>
+                <li>Liase with Operations and R&D departments for product testing, bug reports and product releases.</li>
+              </ul>
+            </p>
+          </div>
+          <div class="resume-item">
             <h4>Associate QA Tester: Build Verification </h4>
               <h5>2023-2024</h5>
               <p><em>Rockstar Games, Edinburgh, UK </em></p>
@@ -319,16 +330,6 @@
                 <li>Write accurate bug reports, triaging serious issues and reporting directly to other departments.</li>
                 <li>Work cohesively with Build and Development teams to ensure all bugs are handled promptly throughout the build lifecycle.</li>
                 <li>Handing work over to, and receiving work from, other global test teams.</li>
-              </ul>
-            </p>
-          </div>
-          <div class="resume-item">
-            <h4>Website Builder/Designer</h4>
-              <h5>2018-2020</h5>
-              <p><em>Midlands Fireplaces and Fittings, Leicester, UK </em></p>
-              <ul>
-                <li>Upload and update product information using a web builder.</li>
-                <li>Create and design webpages to catagorize products.</li>
               </ul>
             </p>
           </div>
